--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,19 @@
-name: Python CI
+name: Python Check
 
-on: [push]
+on: [push]  
 
 jobs:
-  test:
-    runs-on: macos-latest
+  setup:
+    runs-on: macos-latest 
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
+        python-version: "3.12"
     
-    - name: Install pytest
-      run: pip install pytest
-    
-    - name: Run tests
-      run: pytest
+    - name: Check Python version
+      run: python --version  
